# portable-ffmpeg

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run_test.py
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yml
src/portable_ffmpeg/: __init__.py  config.py  core.py  downloaders.py  enums.py
src/stat_ffmpeg/: config.py  downloaders.py  enums.py
tests/: __init__.py  test_core.py  test_downloaders.py  test_enums.py  test_integration.py
